# axum-mongo-sample

./: .env.sample  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: handlers.rs  main.rs  structs.rs
src/handlers/: airbnb.rs  common.rs  mflix.rs  mod.rs  sample.rs
src/structs/: airbnb.rs  common.rs  mflix.rs  mod.rs  sample.rs
