[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"
authors = ["Prashant Singh <me@higsn.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace", "set-header"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = { version = "2.1", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
chrono = "0.4"
futures = "0.3.25"
dotenv = "0.15.0"
serde_with = "2.1.0"
