[package]
name = "rust-axum"
version = "0.2.0"
edition = "2021"
authors = ["Prashant Singh <me@higsn.tech>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "set-header", "timeout", "limit"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
bson = { version = "3.0.0", features = ["chrono-0_4", "serde"] }
mongodb = { version = "3.3.0", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
chrono = "0.4.42"
futures = "0.3.31"
dotenv = "0.15.0"
serde_with = "3.14.1"
